--- a/derporiaStyle.css
+++ b/derporiaStyle.css
@@ -18,7 +18,16 @@ input
 button
 {
 	font-family:"Trebuchet MS";
+	text-align: center;
 	font-size:100%;
+	padding-top: 6px; 
+	padding-bottom: 6px;
+	padding-right: 10px;
+	padding-left: 10px;
+	border: solid 1px #999999;
+	color:white;
+	cursor: pointer;
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#999999), to(#787878));
 }
 
 textarea
