--- a/derporiaStyle.css
+++ b/derporiaStyle.css
@@ -15,13 +15,13 @@ input
 	right: 10px;
 }
 
-button
+button, input.regular
 {
 	font-family:"Trebuchet MS";
 	text-align: center;
-	font-size:100%;
-	padding-top: 6px; 
-	padding-bottom: 6px;
+	font-size:80%;
+	padding-top: 4px; 
+	padding-bottom: 4px;
 	padding-right: 10px;
 	padding-left: 10px;
 	border: solid 1px #999999;
@@ -94,5 +94,5 @@ table.center
 {
 	margin-left:auto;
 	margin-right:auto;
-	width:14%
+	width:54%
 }
