--- a/DerporiaStyle2.css
+++ b/DerporiaStyle2.css
@@ -25,7 +25,7 @@ button, input.regular
 	padding-right: 10px;
 	padding-left: 10px;
 	border: solid 1px #999999;
-	color:white;
+	color:black;
 	cursor: pointer;
 }
 
