--- a/votingStyle.css
+++ b/votingStyle.css
@@ -30,7 +30,7 @@ button, submit, input.regular
 	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#999999), to(#787878));
 }
 
-a
+a.button
 {
 	font-family:"Trebuchet MS";
 	text-align: center;
