--- a/WebContent/votingStyle.css
+++ b/WebContent/votingStyle.css
@@ -15,11 +15,11 @@ input
 	right: 10px;
 }
 
-button, submit, input.regular
+button, submit, input.regular, a.regular
 {
 	font-family:"Trebuchet MS";
 	text-align: center;
-	font-size:100%;
+	font-size:80%;
 	padding-top: 6px; 
 	padding-bottom: 6px;
 	padding-right: 10px;
@@ -27,7 +27,7 @@ button, submit, input.regular
 	border: solid 1px #999999;
 	color:white;
 	cursor: pointer;
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#999999), to(#787878));
+	background: #787878;
 }
 
 a.button
@@ -42,13 +42,13 @@ a.button
 	border: solid 1px #999999;
 	color:white;
 	cursor: pointer;
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#999999), to(#787878));
+	background: #787878;
 
 }
 
 .red 
 { 
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FF0000), to(#600000)); 
+	background: #FF0000; 
 	border: solid 1px #600000; 
 	color:white;
 	cursor: pointer;
@@ -57,14 +57,14 @@ a.button
 .yellow 
 { 
 	border: solid 1px #FF6600;	
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFFF00), to(#FF6600));
+	background: #FF6600;
 	color:white;
 	cursor: pointer;
 }
 
 .green 
 { 
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#00FF33 ), to(#009933)); 
+	background: #00FF33; 
 	border: solid 1px #009933;  
 	color:white;
 	cursor: pointer;
@@ -150,7 +150,7 @@ table.center
 {
 	margin-left:auto;
 	margin-right:auto;
-	width:14%;
+	width:30%;
 	border:solid 3px #85b9fc;
 	border-collapse:collapse;
 }
